2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.addin.xml: Track merge of the project
	  pad context menu.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.mdp:
	* MonoDevelop.Deployment.csproj: Migrated to MSBuild file
	  format.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Deployment.addin.xml: Bump MD version.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Deployment.mdp: Flush project format changes.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* gtk-gui/objects.xml:
	* gtk-gui/generated.cs:
	* MonoDevelop.Deployment.mdp:
	* gtk-gui/MonoDevelop.Deployment.Gui.DeployDialog.cs:
	* gtk-gui/MonoDevelop.Deployment.FileReplaceDialog.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.InstallDialog.cs:
	* gtk-gui/MonoDevelop.Deployment.DeployFileListWidget.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.EditPackageDialog.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.EntrySelectionTree.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.SourcesZipEditorWidget.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.PackagingFeatureWidget.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.BinariesZipEditorWidget.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.CommandDeployEditorWidget.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.FileCopyConfigurationSelector.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.LocalFileCopyConfigurationEditorWidget.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.SshFuseFileCopyConfigurationEditorWidget.cs:
	Updated generated code and removed objects.xml, which is not required
	anymore.

2008-12-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.addin.xml: Fix label.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.mdp: All projects now require fx 3.5.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.mdp: No specific version of Mono.Addins is
	required.
