@@ -1,3 +1,8 @@
+2009-02-26  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Deployment.Gui/PropertyProvider.cs: Worked on
+	  propertygrid localization.
+
 2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Deployment.addin.xml: Track merge of the project
